# news-curator-agent

./: README.md
agent/: pyproject.toml  run_streamlit.py  streamlit_app.py
agent/news_agent/: main.py  mcp_client.py  news_assistant.py
agent/news_agent/tmp/: mcp_news_cli_client.py  simple_agent.py
mcp/: pyproject.toml
mcp/server/: server.py
mcp/server/tools/: __init__.py  example_tool.py  news_fetcher.py
