[project]
name = "news-curator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kazim Ali", email = "kazimcc01@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.3",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["news_curator_agent"]


[tool.uv.workspace]
members = [
    "agent",
]
